<resources>
    <string name="app_name">Lab7</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I\'m a button</string>
    <string name="LoginText">Log in</string>
    <string name="LoginNameText">Login name</string>
    <string name="PasswordText">password</string>
    <string name="RadioButtonText">RadioButton</string>
    <string name="CheckBoxText">CheckBox</string>
    <string name="SwitchText">What does this do?</string>
    <string name="dialog_message">Do you wish to finish the activity (Yes/No)?</string>
    <string name="dialog_title">Message</string>
    <string name="ok">YES</string>
    <string name="cancel">NO</string>
    <string name="response">My information to share</string>
    <string name="ButtonChat">Start Chat</string>
    <string name="ButtonWeatherForecast">Weather Forecast</string>
    <string name="send">Send</string>
    <string name="currentTemperature">Current Temperature</string>
    <string name="minTemperature">Min Temperature</string>
    <string name="maxTemperature">Max Temperature</string>
    <string name="windSpeed">Wind Speed</string>
    <string name="deleteMessage">DELETE THIS MESSAGE</string>
    <string name="chatMessage">Message Here</string>
    <string name="chatID">ID = </string>
</resources>
